Modal to update lens on the lens detail page. Correct handling of possible duplicates.

--- a/sled_data/templates/sled_data/imaging_update.html
+++ b/sled_data/templates/sled_data/imaging_update.html
@@ -7,7 +7,7 @@ Update Imaging data
 
 
 {% block content %}
-<div class="jb-container">
+<div class="jb-container-modal">
   <p>
     Update imaging data taken by <strong>{{ imaging.instrument.name }}</strong> in the <strong>{{ imaging.band.name }}</strong> band for this lens.
   </p>
