--- a/lenses/templates/lenses/lens_detail.html
+++ b/lenses/templates/lenses/lens_detail.html
@@ -5,6 +5,7 @@
 
 {% block content %}
 {% include "modal_container.html" %}
+{% include "modal_container_wide.html" %}
 
 
 <div class="jb-container">
@@ -95,6 +96,10 @@
       <button type="submit" id="update" class="jb-submit-button-1" form="ids-form" formaction="{% url 'lenses:lens-update' %}">
         <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
         Update lens
+      </button>
+      <button type="button" class="sled-modal-wide jb-submit-button-1" data-form-url="{% url 'lenses:lens-update-modal' lens.id %}">
+        <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+        Update lens (Modal)
       </button>
     </div>
     {% endif %}
@@ -253,12 +258,14 @@
 
 {% block extrastyles %}
 <link href="{% static 'lenses/css/lens_detail.css' %}" rel="stylesheet" />
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" />
 {% endblock extrastyles %}
 
 
 {% block extrascripts %}
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
 <script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
 <script type="text/javascript">
   $(document).ready(function(){
       // Modals
@@ -266,6 +273,13 @@
           $(this).modalForm({
               formURL: $(this).data("form-url"),
               modalID: "#id-modal"
+          });
+      });
+
+      $(".sled-modal-wide").each(function() {
+          $(this).modalForm({
+              formURL: $(this).data("form-url"),
+              modalID: "#id-modal-wide"
           });
       });
   });
