--- a/sled_users/templates/sled_users/user_admin.html
+++ b/sled_users/templates/sled_users/user_admin.html
@@ -75,9 +75,9 @@
     <div class="c">
       <input class="accordion-checkbox" type="checkbox" id="admin-1">
       <h1 class="jb-heading-2">
-	<label for="admin-1">
-	  Add band
-	</label>
+  <label for="admin-1">
+    Add band
+  </label>
       </h1>
       <div class="p">
 
@@ -110,25 +110,50 @@
           {% endif %}
           <a href="{% url 'sled_band:band-list' %}">Manage bands</a>
         </div>
-
-
-
-
-
-
       </div>
     </div>
+
+
 
 
     <div class="c">
       <input class="accordion-checkbox" type="checkbox" id="admin-2">
       <h1 class="jb-heading-2">
-	<label for="admin-2">
-	  Add instrument
-	</label>
+  <label for="admin-2">
+    Add instrument
+  </label>
       </h1>
       <div class="p">
-	Nothing
+
+        <div class="jb-container">
+          {% if instruments %}
+          <table class="jb-table">
+            <thead>
+              <tr>
+                <th>Name</th>
+                <th>Extended Name</th>
+                <th>Description</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              {% for instrument in instruments %}
+              <tr>
+                <td>{{ instrument.name }}</td>
+                <td>{{ instrument.extended_name }}</td>
+                <td>{{ instrument.info }}</td>
+              </tr>
+              {% endfor %}
+
+            </tbody>
+          </table>
+          {% else %}
+          <p>
+            No instruments to show
+          </p>
+          {% endif %}
+          <a href="{% url 'sled_instrument:instrument-list' %}">Manage instruments</a>
+        </div>
       </div>
     </div>
 
