--- a/sled_tasks/templates/sled_tasks/task_list.html
+++ b/sled_tasks/templates/sled_tasks/task_list.html
@@ -53,32 +53,30 @@
 	  {% endif %}
           <td>
 	    {% if view.kwargs.admin %}
-
-	    {% if task.status == 'C' %}
-	    <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
-	      <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
-	      View
-	    </button>
-	    {% else %}
-	    {% if task.cargo.user_admin == request.user.username %}
-	    <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
-	      <img src="{% static 'icons/pencil.svg' %}" alt="people">
-	      Respond
-	    </button>
-	    {% endif %}
-	    {% endif %}
+  	    {% if task.status == 'C' %}
+    	    <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
+    	      <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
+    	      View
+    	    </button>
+  	    {% else %}
+    	    {% if task.cargo.user_admin == request.user.username %}
+    	    <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
+    	      <img src="{% static 'icons/pencil.svg' %}" alt="people">
+    	      Respond
+    	    </button>
+    	    {% endif %}
+	      {% endif %}
     
 	    {% else %}
-
-	    <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-recipient' task.id %}">
-	      {% if task.status == 'C' %}
-	      <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
-	      View
-	      {% else %}
-	      <img src="{% static 'icons/pencil.svg' %}" alt="people">
-	      Respond
-	      {% endif %}
-	    </button>
+  	    <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
+  	      {% if task.status == 'C' %}
+    	      <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
+    	      View
+  	      {% else %}
+    	      <img src="{% static 'icons/pencil.svg' %}" alt="people">
+    	      Respond
+  	      {% endif %}
+  	    </button>
 
 	    {% endif %}
 	  </td>
