--- a/sled_tasks/templates/sled_tasks/task_list.html
+++ b/sled_tasks/templates/sled_tasks/task_list.html
@@ -56,7 +56,7 @@
           <td>{{ task.created_at }}</td>
           <td>{{ task.recipients.all|join:", " }}</td>
 	  <td>
-	    <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-owner' task.id %}">
+	    <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-owner' task.id %}">
 	      <img src="{% static 'icons/eye-fill.svg' %}" alt="people">
 	      View
 	    </button>
