--- a/home/templates/home/home_all_activity.html
+++ b/home/templates/home/home_all_activity.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 <div class="jb-container">
-{% include "activity_all.html" with stream=stream %}
+  
+  {% include "pagination_top.html" with qset=stream request=request qset_range=stream_range qset_total=N_stream_total %}
+  {% include "activity_all.html" with stream=stream %}
+  {% include "pagination_bottom.html" with qset=stream request=request qset_range=stream_range qset_total=N_stream_total %}
+
 </div>
 {% endblock content %}
