--- a/lenses/templates/lenses/lens_query.html
+++ b/lenses/templates/lenses/lens_query.html
@@ -12,12 +12,16 @@
     <form id="lens-query" method="POST">
       {% csrf_token %}
 
-      <div class="{% if form.non_field_errors %}invalid{% endif %} mb-2">
-        {% for error in form.non_field_errors %}
-        {{ error }}
-        {% endfor %}
+      {% if form.non_field_errors|length > 0 %}
+      <div class="invalid jb-modal-field">
+	<ul>
+	  {% for error in form.non_field_errors %}
+	  <li>{{ error }}</li>
+	  {% endfor %}
+	</ul>
       </div>
-
+      {% endif %}
+  
       <table>
         <tr>
 
@@ -120,37 +124,8 @@
   </div>
 
 
-  <div class="jb-pagination-table">
-    <table>
-      <tr>
-	<td>
-	  {% if lenses.has_previous %}
-          <a class="sled_submit" href="{{ lenses.number|add:'-1' }}">Previous </a> |
-          {% endif %}
-          {% if lenses.has_next %}
-          <a class="sled_submit" href="{{ lenses.number|add:'1' }}"> Next</a> |
-          {% endif %}
-          Showing {{ lenses.start_index }} - {{ lenses.end_index }} of {{ lenses_count }}
-	</td>
-      </tr>
-      <tr>
-	<td>
-          {% if lenses.has_other_pages %}
-          <p class="jb-pagination-numbers">
-	    {% for n in lenses_range %}
-            {% if n == lenses.number %}
-            <a class="sled_submit" href="{{ n }}" style="color: #BABCEF">{{ n }}</a>
-            {% else %}
-            <a class="sled_submit" href="{{ n }}">{{ n }}</a>
-            {% endif %}
-            {% endfor %}
-	  </p>
-          {% endif %}
-	</td>
-      </tr>
-    </table>
-  </div>
   
+  {% include "pagination_top.html" with qset=lenses request=request qset_range=lenses_range qset_total=lenses_count %}
 
   <div>
     <form id="ids-form" method="POST">
@@ -159,36 +134,7 @@
     </form>
   </div>
 
-  <div class="jb-pagination-table">
-    <table>
-      <tr>
-	<td>
-          {% if lenses.has_other_pages %}
-          <p class="jb-pagination-numbers">
-	    {% for n in lenses_range %}
-            {% if n == lenses.number %}
-            <a class="sled_submit" href="{{ n }}" style="color: #BABCEF">{{ n }}</a>
-            {% else %}
-            <a class="sled_submit" href="{{ n }}">{{ n }}</a>
-            {% endif %}
-            {% endfor %}
-	  </p>
-          {% endif %}
-	</td>
-      </tr>
-      <tr>
-	<td>
-          {% if lenses.has_previous %}
-          <a class="sled_submit" href="{{ lenses.number|add:'-1' }}">Previous </a> |
-          {% endif %}
-          {% if lenses.has_next %}
-          <a class="sled_submit" href="{{ lenses.number|add:'1' }}"> Next</a> |
-          {% endif %}
-          Showing {{ lenses.start_index }} - {{ lenses.end_index }} of {{ lenses_count }}
-	</td>
-      </tr>
-    </table>
-  </div>
+  {% include "pagination_bottom.html" with qset=lenses request=request qset_range=lenses_range qset_total=lenses_count %}
 
   <div>
     <button type="submit" form="ids-form" class="sled-process-lenses jb-submit-button-1" formaction="{% url 'lenses:lens-collage' %}">See collage</button>
@@ -219,59 +165,60 @@
 {{ form.media.js }}
 <script type="text/javascript">
   $(document).ready(function() {
-    $("#save-query").click(function() {
-      // Check that the query form is not empty
-      var myjson = $("#lens-query :input[name!=csrfmiddlewaretoken]").serialize() + '&'; // Need to end in & otherwise the last element remains
-      var get_str = myjson.replace(/[^&]+=&/g, '').replace(/&[^&]+=$/g, '');
-
-      if (get_str.length == 0) {
-        alert('Query does not have any parameters!');
-      } else {
-        // Fetch only the first part of the URL (without any GET arguments)
-        var url = $(this).data('form-url').split('?');
-        var url_core = url[0];
-
-        // Trigger modal
-        var new_form_url = url_core + '?' + get_str;
-        $(this).modalFormTrigger({
-          formURL: new_form_url,
-          modalID: "#id-modal"
-        });
-      }
-    });
-
-    $(".sled_submit").click(function(e) {
-      e.preventDefault();
-      var page = $(this).attr('href');
-      $('#id_page').val(page);
-      $('#mysubmit').trigger('click');
-    });
-
-    $(".sled-process-lenses").click(function() {
-      // Construct get query string
-      var values = [];
-      $('#exe_summary input[type="checkbox"]:checked').each(function() {
-        values.push('ids=' + $(this).val());
+      $("#save-query").click(function() {
+	  // Check that the query form is not empty
+	  var myjson = $("#lens-query :input[name!=csrfmiddlewaretoken]").serialize() + '&'; // Need to end in & otherwise the last element remains
+	  var get_str = myjson.replace(/[^&]+=&/g, '').replace(/&[^&]+=$/g, '');
+	  
+	  if (get_str.length == 0) {
+              alert('Query does not have any parameters!');
+	  } else {
+              // Fetch only the first part of the URL (without any GET arguments)
+              var url = $(this).data('form-url').split('?');
+              var url_core = url[0];
+	      
+              // Trigger modal
+              var new_form_url = url_core + '?' + get_str;
+              $(this).modalFormTrigger({
+		  formURL: new_form_url,
+		  modalID: "#id-modal"
+              });
+	  }
       });
-
-      if (values.length == 0) {
-        alert('You need to select at least one item!');
-      } else {
-        var get_str = '?' + values.join('&') + '&';
-
-        // Fetch only the first part of the URL (without any GET arguments)
-        var url = $(this).data('form-url').split('?');
-        var url_core = url[0];
-
-        // Trigger modal
-        var new_form_url = url_core + get_str;
-        $(this).modalFormTrigger({
-          formURL: new_form_url,
-          modalID: "#id-modal"
-        });
-      }
-    });
-
+      
+      $(".sled_submit").click(function(e) {
+	  e.preventDefault();
+	  var dum = $(this).attr('href').split('page=');
+	  var page = dum[1].replace('#','');
+	  $('#id_page').val(page);
+	  $('#mysubmit').trigger('click');
+      });
+      
+      $(".sled-process-lenses").click(function() {
+	  // Construct get query string
+	  var values = [];
+	  $('#exe_summary input[type="checkbox"]:checked').each(function() {
+              values.push('ids=' + $(this).val());
+	  });
+	  
+	  if (values.length == 0) {
+              alert('You need to select at least one item!');
+	  } else {
+              var get_str = '?' + values.join('&') + '&';
+	      
+              // Fetch only the first part of the URL (without any GET arguments)
+              var url = $(this).data('form-url').split('?');
+              var url_core = url[0];
+	      
+              // Trigger modal
+              var new_form_url = url_core + get_str;
+              $(this).modalFormTrigger({
+		  formURL: new_form_url,
+		  modalID: "#id-modal"
+              });
+	  }
+      });
+      
   });
 </script>
 {% endblock extrascripts %}
