--- a/sled_band/templates/sled_band/band_create.html
+++ b/sled_band/templates/sled_band/band_create.html
@@ -5,26 +5,34 @@ Create new band?
 {% endblock title %}
 
 {% block content %}
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
-  {% for error in form.non_field_errors %}
-  {{ error }}
-  {% endfor %}
-</div>
+<div class="jb-container-modal">
 
-<div>
-  {{ form.name }}
-</div>
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+  
+  <div>
+    {{ form.name }}
+  </div>
+  
+  <div>
+    {{ form.extended_name }}
+  </div>
+  
+  <div>
+    {{ form.wavelength }}
+  </div>
+  
+  <div>
+    {{ form.info }}
+  </div>
 
-<div>
-  {{ form.extended_name }}
-</div>
-
-<div>
-  {{ form.wavelength }}
-</div>
-
-<div>
-  {{ form.info }}
 </div>
 {% endblock content %}
 
