--- a/sled_groups/templates/sled_groups/group_ask_to_join.html
+++ b/sled_groups/templates/sled_groups/group_ask_to_join.html
@@ -7,20 +7,26 @@ Request to join group
 
 
 {% block content %}
-<div class="jb-modal-field">
-  <div class="{% if form.non_field_errors %}invalid{% endif %}">
-    {% for error in form.non_field_errors %}
-    {{ error }}
-    {% endfor %}
+<div class="jb-container-modal">
+
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
   </div>
+  {% endif %}
 
   <div>
     Send request to join the group named <strong>{{ sledgroup.name }}</strong>?
   </div>
-
+  
   <div>
     {{ form.justification }}
   </div>
+  
 </div>
 {% endblock content %}
 
