--- a/sled_instrument/templates/sled_instrument/instrument_update.html
+++ b/sled_instrument/templates/sled_instrument/instrument_update.html
@@ -7,17 +7,25 @@ Update instrument
 
 
 {% block content %}
-<div class="{% if form.non_field_errors %}invalid{% endif %}">
-  {% for error in form.non_field_errors %}
-  {{ error }}
-  {% endfor %}
-</div>
+<div class="jb-container-modal">
 
-{% for field in form %}
-<div>
-  {{ field }}
+  {% if form.non_field_errors|length > 0 %}
+  <div class="invalid jb-modal-field">
+    <ul>
+      {% for error in form.non_field_errors %}
+      <li>{{ error }}</li>
+      {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+
+  {% for field in form %}
+  <div>
+    {{ field }}
+  </div>
+  {% endfor %}
+
 </div>
-{% endfor %}
 {% endblock content %}
 
 
