--- a/sled_instrument/templates/sled_instrument/instrument_create.html
+++ b/sled_instrument/templates/sled_instrument/instrument_create.html
@@ -17,15 +17,15 @@ Create new instrument?
   </div>
   {% endif %}
 
-  <div>
+  <div class="jb-modal-field">
     {{ form.name }}
   </div>
   
-  <div>
+  <div class="jb-modal-field">
     {{ form.extended_name }}
   </div>
   
-  <div>
+  <div class="jb-modal-field">
     {{ form.info }}
   </div>
 
