--- a/sled_band/templates/sled_band/band_delete.html
+++ b/sled_band/templates/sled_band/band_delete.html
@@ -7,12 +7,14 @@ Delete band?
 
 
 {% block content %}
-<div>
-  Are you sure you want to delete the band named <strong>{{ band.name }}</strong>?
+<div class="jb-container-modal">
+  <p>
+    Are you sure you want to delete the band named <strong>{{ band.name }}</strong>?
+  </p>
 </div>
 {% endblock content %}
 
 
 {% block action_button %}
-<button type="submit" class="btn btn-danger">Delete</button>
+<button type="submit" class="jb-submit-button-1">Delete</button>
 {% endblock action_button %}
