--- a/sled_users/templates/sled_users/user_admin.html
+++ b/sled_users/templates/sled_users/user_admin.html
@@ -6,7 +6,8 @@
 {% include "modal_container.html" %}
 <div class="jb-container">
 
-
+  {{ hash }}
+  
   <div class="jb-table-no-lines">
     <h1 class="jb-heading-1">Admin: {{ user.first_name }} {{ user.last_name }} ({{ user.username }})</h1>
     <p style="margin-bottom:2px">
@@ -66,87 +67,110 @@
     
     
     <div class="c">
-      <input class="accordion-checkbox" type="checkbox" id="admin-1">
+      <input class="accordion-checkbox" type="checkbox" id="bands">
       <h1 class="jb-heading-2">
-  <label for="admin-1">
-    Add band
-  </label>
+	<label for="bands">
+	  Bands
+	</label>
       </h1>
       <div class="p">
-
-        <div class="jb-container">
-          {% if bands %}
-          <table class="jb-table">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Wavelength</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              {% for band in bands %}
-              <tr>
-                <td>{{ band.name }}</td>
-                <td>{{ band.wavelength }}</td>
-                <td>{{ band.info }}</td>
-              </tr>
-              {% endfor %}
-
-            </tbody>
-          </table>
-          {% else %}
-          <p>
-            No bands to show
-          </p>
-          {% endif %}
-          <a href="{% url 'sled_band:band-list' %}">Manage bands</a>
-        </div>
+	<br>
+        {% if bands %}
+        <table class="jb-table">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Wavelength</th>
+              <th>Description</th>
+	      <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for band in bands %}
+            <tr>
+              <td>{{ band.name }}</td>
+              <td>{{ band.wavelength }}</td>
+              <td>{{ band.info }}</td>
+	      <td>
+		<button type="button" class="sled-delete-band jb-submit-button-1" data-form-url="{% url 'sled_band:band-delete' band.pk %}">
+		  <img src="{% static 'icons/trash.svg' %}" alt="trash">
+		  Delete
+		</button>
+		<button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_band:band-update' band.pk %}">
+		  <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+		  Update
+		</button>
+	      </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        {% else %}
+        <p>
+          No bands to show
+        </p>
+        {% endif %}
+	<button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_band:band-add' %}">
+	  <img src="{% static 'icons/folder-fill.svg' %}" alt="new-band">
+	  Create new band
+	</button>
+	<br>
+	<br>
       </div>
     </div>
 
 
 
-
     <div class="c">
-      <input class="accordion-checkbox" type="checkbox" id="admin-2">
+      <input class="accordion-checkbox" type="checkbox" id="instruments">
       <h1 class="jb-heading-2">
-  <label for="admin-2">
-    Add instrument
-  </label>
+	<label for="instruments">
+	  Instruments
+	</label>
       </h1>
       <div class="p">
-
-        <div class="jb-container">
-          {% if instruments %}
-          <table class="jb-table">
-            <thead>
-              <tr>
-                <th>Name</th>
-                <th>Extended Name</th>
-                <th>Description</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              {% for instrument in instruments %}
-              <tr>
-                <td>{{ instrument.name }}</td>
-                <td>{{ instrument.extended_name }}</td>
-                <td>{{ instrument.info }}</td>
-              </tr>
-              {% endfor %}
-
-            </tbody>
-          </table>
-          {% else %}
-          <p>
-            No instruments to show
-          </p>
-          {% endif %}
-          <a href="{% url 'sled_instrument:instrument-list' %}">Manage instruments</a>
-        </div>
+	<br>
+        {% if instruments %}
+        <table class="jb-table">
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Extended Name</th>
+              <th>Description</th>
+	      <th></th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for instrument in instruments %}
+            <tr>
+              <td>{{ instrument.name }}</td>
+              <td>{{ instrument.extended_name }}</td>
+              <td>{{ instrument.info }}</td>
+	      <td>
+		<button type="button" class="sled-delete-instrument jb-submit-button-1" data-form-url="{% url 'sled_instrument:instrument-delete' instrument.pk %}">
+		  <img src="{% static 'icons/trash.svg' %}" alt="trash">
+		  Delete
+		</button>
+		<button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_instrument:instrument-update' instrument.pk %}">
+		  <img src="{% static 'icons/pencil.svg' %}" alt="pencil">
+		  Update
+		</button>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+        {% else %}
+        <p>
+          No instruments to show
+        </p>
+        {% endif %}
+	<button type="button" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_instrument:instrument-add' %}">
+	  <img src="{% static 'icons/folder-fill.svg' %}" alt="new-instrument">
+	  Create new instrument
+	</button>
+	<br>
+	<br>
       </div>
     </div>
 
@@ -267,6 +291,8 @@
 
 
 {% block extrascripts %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
 <script>
   $(document).ready(function() {
       $('.p').hide();
@@ -279,6 +305,30 @@
 	      // Animation complete.
 	  });
       });
+
+     // Modals
+      $('.sled-delete-band,.sled-delete-instrument').each(function(){
+	  $(this).modalForm({
+ 	      formURL: $(this).data("form-url"),
+ 	      modalID: "#id-modal",
+ 	      isDeleteForm: true
+	  });
+      });
+
+      $(".sled-modal").each(function(){
+	  $(this).modalForm({
+              formURL: $(this).data("form-url"),
+ 	      modalID: "#id-modal"
+	  });
+      });
+
+
+      // Scroll to opened accordion div
+      var hash = ("{{ hash }}");
+      if( hash ){
+	  $('#'+hash).trigger("click");
+	  //$('html,body').animate({scrollTop: $('#'+hash).offset().top},'slow');
+      }
   });
 </script>
 {% endblock extrascripts %}
